tests/unit-fail-compilation/j044c.c.ref
j044c.c: In function ‘main’:
j044c.c:6:15: error: conversion to non-scalar type requested
       (struct str)p;
               ^
compilation terminated due to -Wfatal-errors.
Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
kcc -d -Werror -Wfatal-errors j044c.c
